# search-engine-oop

./: CMakeLists.txt  README.md  stopwords.txt
src/: Arguments.cc  Arguments.h  CMakeLists.txt  main.cc
src/Analysis/: Analysis.cc  Analysis.h  Jieba.cc  Jieba.h
src/Document/: Document.cc  Document.h  Field.cc  Field.h  FieldType.h  Meta.h
src/Index/: Index.cc  Index.h  InvertedIndex.cc  InvertedIndex.h  Segment.cc  Segment.h
src/Search/: AnalyzedPhraseQuery.h  BooleanQuery.cc  BooleanQuery.h  IndexSearcher.cc  IndexSearcher.h  PhraseQuery.cc  PhraseQuery.h  Query.h  SearchResultItem.h  TermQuery.cc  TermQuery.h
